--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,12 @@
 [submodule "caravel"]
 	path = caravel
 	url = https://github.com/efabless/caravel
+[submodule "mgmt_core_wrapper"]
+	path = mgmt_core_wrapper
+	url = https://github.com/efabless/caravel_mgmt_soc_litex
+[submodule "dependencies/openlane_src"]
+	path = dependencies/openlane_src
+	url = https://github.com/The-OpenROAD-Project/OpenLane
+[submodule "deps/timing-scripts"]
+	path = deps/timing-scripts
+	url = https://github.com/efabless/timing-scripts.git
